--- a/package.json
+++ b/package.json
@@ -24,7 +24,5 @@
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.5.1"
   },
-  "dependencies": {
-    "slick-carousel": "^1.8.1"
-  }
+  "dependencies": {}
 }
